<resources>
    <string name="app_name">FastShop</string>

    <string name="cart">cart</string>
    <string name="all_goods">all goods</string>
    <string name="home_page">home page</string>
    <string name="announced_the_latest">announced the latest</string>
    <string name="personal_center">personal center</string>
    <string name="buy_at_once">buy at once</string>
    <string name="took_part_in">took part in</string>
    <string name="to_be_announced">to be announced</string>
    <string name="guess_you_like">guess you like</string>
    <string name="beginner_guide">beginner guide</string>
    <string name="find_goods">find goods</string>
    <string name="recharge_center">recharge center</string>
    <string name="show_all">show all</string>
    <string name="hot_recommended">hot recommended</string>
    <string name="lottery_winner">lottery winner:</string>
    <string name="residue">reside</string>
    <string name="all_classification">all classification</string>
    <string name="value">value</string>
    <string name="fast_shop_now">fast shop now</string>
    <string name="my_cloud_and_purchasing_records">my cloud and purchasing records</string>
    <string name="the_winning_record">the winning record</string>
    <string name="recharge">recharge</string>
    <string name="shipping_address">shipping address</string>
    <string name="qr_code_to_download">qr code to download</string>
    <string name="invite_code">invite code</string>
    <string name="login">login</string>
    <string name="register">register</string>
    <string name="scanning_download_vehicle_to_purchase_the_official_App">scanning download vehicle to purchase the official app</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login_by_weixin">login by weixin</string>
    <string name="login_by_QQ">login by QQ</string>
    <string name="fast_registet_by_phone">fast register by phone</string>
    <string name="retrieve_password">retrieve password</string>
    <string name="please_input_phone_number">please input phone number</string>
    <string name="agree">agree</string>
    <string name="minutes_for_user_registration_agreement">minutes for user registration agreement</string>
    <string name="next_step">next step</string>
    <string name="have_problem_you_can">have problem and you can</string>
    <string name="contact_customer_service">contact customer service</string>
    <string name="use_username_login">use username login</string>
    <string name="make_sure">make sure</string>
    <string name="new_password">new password</string>
    <string name="phone_number">phone number</string>
    <string name="verification_code">verification code</string>
    <string name="get_verification_code">get verification code</string>
    <string name="minute">minute</string>
    <string name="second_purchase">second purchase</string>
    <string name="the_url">fmg100.cn</string>
    <string name="cart_is_empty">your cart is empty</string>
    <string name="go_shopping_now">go shopping now</string>
    <string name="setting">setting</string>

    <string name="the_personal_data">the personal data</string>
    <string name="safe_setting">safe setting</string>
    <string name="help_center">help center</string>
    <string name="about_us">about us</string>
    <string name="service_agreement">service agreement</string>
    <string name="customer_service_hotline">customer service hotline</string>
    <string name="clear_cache">clear cache</string>
    <string name="avatar">avatar</string>
    <string name="nickname">nickname</string>
    <string name="sex">sex</string>
    <string name="birthday">birthday</string>
    <string name="personal_sign">personal sign</string>
    <string name="bind_inviter">bind inviter</string>
    <string name="please_choose_pay_way">please choose pay way</string>
    <string name="consignee">consignee</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="top_up_page">Top_up page</string>
    <string name="prepaid_phone_records">Prepaid phone records</string>
    <string name="the_account_balance">The account balance:</string>
    <string name="_20">20</string>
    <string name="_100">100</string>
    <string name="_200">200</string>
    <string name="_500">500</string>
    <string name="other_amount">Other amount</string>
    <string name="_50">50</string>
    <string name="account_balance_num">￥0.00</string>
    <string name="please_choose_the_way_to_top_up">please choose the way to top up</string>
    <string name="yun_pay_phone">yun pay phone</string>
    <string name="recharge_record">recharge_record</string>
</resources>
