<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.administrator.fastshop.view.fragment.TopUpFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/the_account_balance"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/item_tv_account_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_balance_num"
            android:textColor="@color/titleColor"
            android:textSize="15sp" />
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp">

            <Button
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/item_botton"
                android:text="@string/_20" />

            <Button
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/item_botton"
                android:text="@string/_50" />

            <Button
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/item_botton"
                android:text="@string/_100" />

        </TableRow>

        <TableRow
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp">

            <Button
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/item_botton"
                android:text="@string/_200" />

            <Button
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/item_botton"
                android:text="@string/_500" />

            <Button
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/item_botton"
                android:text="@string/other_amount" />
        </TableRow>
    </TableLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:text="@string/please_choose_the_way_to_top_up"
        android:gravity="center_vertical"
        android:textColor="@color/black"
        android:paddingStart="10dp"/>

    <LinearLayout
        android:id="@+id/fragment_top_up_ll"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/white">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/image_yun_pay"
            android:layout_marginStart="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/yun_pay_phone"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginStart="30dp"/>
    </LinearLayout>
</LinearLayout>
