<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registe_by_phone"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/regist_rl_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/login_img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/icon_back"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            />

        <TextView
            android:id="@+id/login_tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fast_registet_by_phone"
            android:layout_centerInParent="true"
            android:textSize="25sp"
            android:textColor="@color/black"/>
    </RelativeLayout>


    <EditText
        android:id="@+id/regist_edt_input_phonenum"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/regist_rl_title"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/white"
        android:hint="@string/please_input_phone_number"
        android:paddingLeft="10dp"
        android:textCursorDrawable="@null"/>

    <LinearLayout
        android:id="@+id/regist_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/regist_edt_input_phonenum"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/regist_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="CustomCheckBoxTheme"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agree"/>

        <TextView
            android:id="@+id/regist_tv_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minutes_for_user_registration_agreement"
            android:textColor="@color/black"/>

    </LinearLayout>

    <Button
        android:id="@+id/regist_btn_next_step"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/regist_ll"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/next_step"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/regist_btn_next_step"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_problem_you_can"/>

        <TextView
            android:id="@+id/regist_tv_contact_srvice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_customer_service"
            android:textColor="@color/black"
            android:autoLink="all"/>

    </LinearLayout>
</RelativeLayout>
