<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_forget_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    >

    <RelativeLayout
        android:id="@+id/forget_rl_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/login_img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/icon_back"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            />

        <TextView
            android:id="@+id/login_tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retrieve_password"
            android:layout_centerInParent="true"
            android:textSize="25sp"
            android:textColor="@color/black"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white">
        <LinearLayout
            android:id="@+id/phone_register_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            >



            <EditText
                android:id="@+id/forget_edt_phonenumber"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/phone_number"
                android:paddingStart="20dp"
                android:background="@null"
                android:inputType="number"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divide_line"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="1dp"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/forget_edt_sms"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/verification_code"
                    android:paddingStart="20dp"
                    android:background="@null"/>
                <TextView
                    android:id="@+id/forget_password_text_send"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/get_verification_code"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="10dp"
                    android:layout_centerVertical="true"
                    android:padding="4dp"
                    android:background="@color/blue"/>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divide_line"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="1dp"/>
            <EditText
                android:id="@+id/forget_edt_new_password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/new_password"
                android:paddingStart="20dp"
                android:background="@null"
                android:inputType="textPassword"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divide_line"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="1dp"/>

    </LinearLayout>

        <TextView
            android:id="@+id/forget_password_btn_sure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/make_sure"
            android:gravity="center"
            android:layout_marginRight="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="10dp"
            android:padding="8dp"
            android:background="@color/titleColor"
            />

        <TextView
            android:id="@+id/forget_tv_has_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/use_username_login"
            android:textSize="12sp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="30dp"
            android:gravity="end"
            />

    </LinearLayout>

</LinearLayout>
