<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/login_rl_title"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageView
            android:id="@+id/login_img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/icon_back"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            />

        <TextView
            android:id="@+id/login_tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_centerInParent="true"
            android:textSize="25sp"
            android:textColor="@color/black"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/login_rl_username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/login_rl_title"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="50dp">


        <TextView
            android:id="@+id/login_tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_centerVertical="true"
            />

        <EditText
            android:id="@+id/login_edt_username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/login_tv_username"
            android:layout_marginLeft="10dp"
            android:textCursorDrawable="@null"/>
    </RelativeLayout>
    <View
        android:id="@+id/login_view_divide_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divide_line"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/login_rl_username"/>

    <RelativeLayout
        android:id="@+id/login_rl_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/login_view_divide_line"
        android:layout_margin="10dp">


        <TextView
            android:id="@+id/login_tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_centerVertical="true"
            />

        <EditText
            android:id="@+id/login_edt_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/login_tv_password"
            android:layout_marginLeft="10dp"
            android:textCursorDrawable="@null"/>
    </RelativeLayout>
    <View
        android:id="@+id/login_divide_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divide_line"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/login_rl_password"/>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/login_divide_line"
        android:layout_margin="10dp"
        android:text="@string/login"
        android:textSize="20sp"
        android:textColor="@color/loginColor"/>


    <TextView
        android:id="@+id/login_tv_regist_by_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fast_registet_by_phone"
        android:layout_below="@+id/login_btn"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        />


    <TextView
        android:id="@+id/login_tv_retrieve_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retrieve_password"
        android:layout_below="@+id/login_btn"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_alignParentRight="true"
        />

    <RelativeLayout
        android:id="@+id/login_rl_weixin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="80dp">

        <ImageView
            android:id="@+id/login_image_weixin"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/image_weixin"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_by_weixin"
            android:layout_below="@+id/login_image_weixin"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/black"
            />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/login_rl_QQ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:layout_marginRight="80dp"
        android:layout_alignParentRight="true">

        <ImageView
            android:id="@+id/login_image_QQ"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/image_qq"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_by_QQ"
            android:layout_below="@+id/login_image_QQ"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/black"
            />

    </RelativeLayout>


</RelativeLayout>
