<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_recharge"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/titleColor">

        <ImageView
            android:id="@+id/recharge_image_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@mipmap/back_nomal"
            android:layout_marginStart="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recharge_center"
            android:textColor="@color/white"
            android:layout_centerInParent="true"
            android:textSize="25sp"/>
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/recharge_tv_chongzhiyemian"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/top_up_page"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="15sp"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/divide_line"/>
        <TextView
            android:id="@+id/recharge_tv_chongzhijilu"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/prepaid_phone_records"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="15sp"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divide_line"/>

    <FrameLayout
        android:id="@+id/recharge_framlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>
