<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.administrator.fastshop.view.fragment.AllGoodsFragment"
    android:orientation="vertical"
    >

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/All_goods_tv_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/titleColor"
        android:text="@string/all_goods"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="25sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/allGoodsBackColor">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <TextView
                android:id="@+id/All_goods_tv_all_classification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_classification"
                android:layout_centerInParent="true"
                android:textSize="20sp"/>

            <ImageView
                android:id="@+id/All_goods_img_all_sort_down"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@mipmap/icon_sort_down"
                android:layout_toEndOf="@+id/All_goods_tv_all_classification"
                android:layout_centerVertical="true"
                android:layout_marginStart="5dp"/>

        </RelativeLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="40dp"
            android:background="@color/divide_line"
            android:layout_gravity="center_vertical"/>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <TextView
                android:id="@+id/All_goods_tv_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/value"
                android:layout_centerInParent="true"
                android:textSize="20sp"/>

            <ImageView
                android:id="@+id/All_goods_img_value_sort_up"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@mipmap/icon_sort_up"
                android:layout_toEndOf="@+id/All_goods_tv_value"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"/>

            <ImageView
                android:id="@+id/All_goods_img_value_sort_down"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@mipmap/icon_sort_down"
                android:layout_toEndOf="@+id/All_goods_tv_value"
                android:layout_below="@+id/All_goods_img_value_sort_up"
                android:layout_marginStart="5dp"/>

        </RelativeLayout>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/All_goods_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    </android.support.v7.widget.RecyclerView>

</LinearLayout>
